# ai-navigator

./: .env  .gitignore  LICENSE  README.md  future_plans.md  init_db.py  main.py  plan.md  pyproject.toml  real_testing.py  requirements.txt  test.py  test_web_navigation.py  ultimate_ai.db
core/: README.md
core/database/: README.md  database.py  models.py
core/plugins/: README.md  selenium_manager.py
core/plugins/apis/: ollama_client.py
navigator/: README.md  __init__.py  orchestrator.py  web_navigator.py
navigator/brain/: README.md  api_reverse_engineer.py  code_assistant.py  planner.py
navigator/memory/: README.md  semantic_indexer.py
